// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolvers Mutations #addRoom returns a new room 1`] = `
Room {
  "currentTrack": null,
  "history": Array [],
  "id": "1",
  "name": "newRoom",
  "queue": Array [],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;

exports[`resolvers Mutations #joinRoom returns the updated room 1`] = `
Room {
  "currentTrack": Object {
    "album": undefined,
    "artists": undefined,
    "duration": undefined,
    "name": undefined,
    "spotifyUri": undefined,
    "started": "2017-09-20T19:47:14.830Z",
  },
  "history": Array [],
  "id": "1",
  "name": "test",
  "queue": Array [
    Object {
      "album": Object {
        "name": "albumname",
      },
      "artists": Array [
        Object {
          "name": "artist",
        },
      ],
      "duration": 30000,
      "name": "track",
      "spotifyUri": "6Inmo6ElDCaiZCiB6lficH",
    },
  ],
  "timer": null,
  "userSongs": Object {
    "d34479239e70df24688f16b94add383f": Array [],
  },
  "users": Array [
    Object {
      "email": "cookie@monster.com",
      "id": "d34479239e70df24688f16b94add383f",
    },
    Object {
      "email": "cookie@monster.com",
      "id": "d34479239e70df24688f16b94add383f",
    },
  ],
}
`;

exports[`resolvers Mutations #queueTrack returns the new track 1`] = `
Object {
  "album": Object {
    "name": "albumname",
  },
  "artists": Array [
    Object {
      "name": "artist",
    },
  ],
  "duration": 30000,
  "name": "track",
  "spotifyUri": "6Inmo6ElDCaiZCiB6lficH",
}
`;

exports[`resolvers Query #room finds one room using id 1`] = `
Room {
  "currentTrack": null,
  "history": Array [],
  "id": "1",
  "name": "test",
  "queue": Array [],
  "timer": null,
  "userSongs": Object {},
  "users": Array [],
}
`;

exports[`resolvers Query #rooms returns current rooms 1`] = `Array []`;
